--- a/mp1/mp1.html
+++ b/mp1/mp1.html
@@ -6,7 +6,7 @@
     </head>
 
     <script id="vertex-shader" type="x-shader">
-        attribute vec3 vertex_position;
+        attribute vec2 a_position;
         uniform vec2 u_resolution;
         uniform vec2 u_scale;
         uniform vec2 u_translation;
@@ -14,22 +14,22 @@
         void main(void) {
             // Transformations
             // Scaling vertex position
-            vec2 scaled_position = vertex_position * u_scale;
+            vec2 scaled_position = a_position * u_scale;
     
             // Add translation
             vec2 transform_position = scaled_position + u_translation;
             
             // Compute pixel space to clip space
-            vec2 clip_position = ((vertex_position / u_resolution) * 2.0) - 1.0; 
+            vec2 clip_position = ((transform_position / u_resolution) * 2.0) - 1.0; 
             gl_Position = vec4(clip_position * vec2(1, -1), 0, 1.0);
         }
     </script>
 
     <script id="fragment-shader" type="x-shader">
         precision mediump float;
-        varying vec4 vColor;
+        uniform vec4 u_color;
         void main(void) {
-            gl_FragColor = vColor;
+            gl_FragColor = u_color;
         }
     </script>
 
