--- a/mp1/mp1.html
+++ b/mp1/mp1.html
@@ -7,9 +7,12 @@
 
     <script id="vertex-shader" type="x-shader">
         attribute vec2 a_position;
+        attribute vec4 a_color;
         uniform vec2 u_resolution;
         uniform vec2 u_scale;
         uniform vec2 u_translation;
+
+        varying vec4 v_color;
 
         void main(void) {
             // Transformations
@@ -23,14 +26,17 @@
             //vec2 clip_position = ((transform_position / u_resolution) * 2.0) - 1.0; 
             //gl_Position = vec4(clip_position * vec2(1, -1), 0, 1.0);
             gl_Position = vec4(a_position, 0, 1.0);
+            v_color = a_color;
         }
     </script>
 
     <script id="fragment-shader" type="x-shader">
         precision mediump float;
-        uniform vec4 u_color;
+        varying vec4 v_color;
+        //uniform vec4 u_color;
         void main(void) {
-            gl_FragColor = u_color;
+            //gl_FragColor = u_color;
+            gl_FragColor = v_color;
         }
     </script>
 
