--- a/mp1/mp1.html
+++ b/mp1/mp1.html
@@ -8,23 +8,9 @@
     <script id="vertex-shader" type="x-shader">
         attribute vec2 a_position;
         attribute vec4 a_color;
-        uniform vec2 u_resolution;
-        uniform vec2 u_scale;
-        uniform vec2 u_translation;
-
         varying vec4 v_color;
 
         void main(void) {
-            // Transformations
-            // Scaling vertex position
-            vec2 scaled_position = a_position * u_scale;
-    
-            // Add translation
-            vec2 transform_position = scaled_position + u_translation;
-            
-            // Compute pixel space to clip space
-            //vec2 clip_position = ((transform_position / u_resolution) * 2.0) - 1.0; 
-            //gl_Position = vec4(clip_position * vec2(1, -1), 0, 1.0);
             gl_Position = vec4(a_position, 0, 1.0);
             v_color = a_color;
         }
@@ -33,13 +19,12 @@
     <script id="fragment-shader" type="x-shader">
         precision mediump float;
         varying vec4 v_color;
-        //uniform vec4 u_color;
         void main(void) {
             //gl_FragColor = u_color;
             gl_FragColor = v_color;
         }
     </script>
-
+    <script src="gl-matrix-min.js"></script>
     <script src="mp1.js"></script>
     <body onload="startup();">
         <canvas id="mp1GLCanvas" width="500" height="500"></canvas>
