Added radio button feature

--- a/mp1/mp1.html
+++ b/mp1/mp1.html
@@ -31,6 +31,10 @@
     <script type="text/javascript" src="webgl-utils.js"></script>
     <script src="mp1.js"></script>
     <body onload="startup();">
+        <div id="On/off">
+            <input type="radio" id="r1" name="Animation" value=1>
+            <input type="radio" id="r2" name="Animation" value=0> 
+        </div>
         <canvas id="mp1GLCanvas" width="600" height="600"></canvas>
     </body>
 </html>
