--- a/mp2/mp2.html
+++ b/mp2/mp2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Illini</title>
+        <title>Terrain</title>
         <meta charset="utf-8">
     </head>
 
