--- a/mp2/mp2.html
+++ b/mp2/mp2.html
@@ -28,7 +28,8 @@
     </script>
     <script src="gl-matrix-min.js"></script>
     <script type="text/javascript" src="webgl-utils.js"></script>
-    <script src="mp1.js"></script>
+    <script src="terrain.js"></script>
+    <script src="mp2.js"></script>
     <body onload="startup();">
         <div id="animationToggle">
             <input type="radio" id="r1" name="Animation" value=1 checked="checked">
