Refactor buffer loading; using uniform color buffer

--- a/mp2/mp2.html
+++ b/mp2/mp2.html
@@ -10,7 +10,7 @@
         attribute vec4 a_color;
         varying vec4 v_color;
 
-        // Affine transformation matrix
+        // Model-view matrix
         uniform mat4 uMVMatrix;
 
         void main(void) {
