--- a/mp2/mp2.html
+++ b/mp2/mp2.html
@@ -75,6 +75,7 @@
         uniform vec3 uKDiffuse;
         uniform vec3 uKSpecular;
         uniform float uShininess;
+        uniform float uFogDensity;
 
         void main(void) {
             // Calculate n dot l for diffuse lighting
@@ -97,6 +98,16 @@
             gl_FragColor = vec4(((uAmbientLightColor*uKAmbient)
                         + (uDiffuseLightColor*vDiffuse) * diffuseLightWeightning
                         + ((uSpecularLightColor*uKSpecular) * specularLightWeightning)),1.0);
+
+            float fogCoord = (gl_FragCoord.z/gl_FragCoord.w);
+
+            float log2 = 1.442695;
+            float fogDensity = uFogDensity;
+            float fogFactor = exp2(-fogDensity*fogDensity*fogCoord*fogCoord*log2);
+            fogFactor = clamp(fogFactor, 0.0, 1.0);
+
+            vec4 fogColor = vec4(1.0,1.0,1.0,1.0);
+            gl_FragColor = mix(fogColor, gl_FragColor, fogFactor);            
         }
     </script>
     <script src="gl-matrix-min.js"></script>
@@ -104,6 +115,6 @@
     <script src="terrain.js"></script>
     <script src="mp2.js"></script>
     <body onload="startup();">
-        <canvas id="mp1GLCanvas" width="800" height="800"></canvas>
+        <canvas id="mp1GLCanvas" width="800" height="700"></canvas>
     </body>
 </html>
