--- a/mp2/mp2.html
+++ b/mp2/mp2.html
@@ -117,7 +117,8 @@
     <body onload="startup();">
         <canvas id="mp1GLCanvas" width="800" height="600"></canvas>
     </body>
-    <body overflow-y=hidden>
+    <body>
+        <p id="pitch">Pitch: </p>
         <p>
             Press left arrow key to roll plane to left. <br>
             Press right arrow key to roll plane to right. <br>
