Physics now bouncing properly; initial random velocity was too slow relative to gravity

--- a/mp4/mp4.html
+++ b/mp4/mp4.html
@@ -106,6 +106,7 @@
         <div id="animationToggle">
             Enable fog:
             <input type="checkbox" id="r1" name="Animation" value=1 checked="checked">
+			<input type="button" id="r2" value="Reset" name="Reset" onclick="resetCanvas()">
         </div>
     </body>
 </html>
